# python-package

./: .gitignore  .travis.yml  404.html  CNAME  README.md  index.html  logging.json  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  tox.ini  vs.code-workspace
about/: index.html
docs/: CNAME  index.md  requirements.md  usage.md
python_package/: __init__.py  __version__.py  cli.py  english.py
python_package/utils/: __init__.py  io.py
requirements/: index.html
search/: search_index.json
tests/: test_cli.py
usage/: index.html
